--- a/app/views/new.erb
+++ b/app/views/new.erb
@@ -1,6 +1,14 @@
-<form action="/tasks" method="post">
-  <p>Enter a new task:</p>
-  <input type='text' name='task[title]'/><br/>
-  <textarea name='task[description]'></textarea><br/>
-  <input type='submit'/>
-</form>
+<div class="text-center">
+  <form action="/tasks" method="post">
+    <div class="form-group">
+      <h1>Enter a new task:</h1>
+        <label for='exampleInputTask'>Task name:</lable>
+          <input type='text' name='task[title]' id='exampleInputTask'/><br/>
+        </div>
+        <div class="form-group">
+          <label for='exampleInputTaskDescription'>Task description:</lable>
+            <textarea name='task[description]' id='exampleInputTaskDescription'></textarea><br/>
+        </div>
+          <input type='submit' class="btn btn-default"/>
+  </form>
+</div>
