--- a/app/views/show.erb
+++ b/app/views/show.erb
@@ -1,3 +1,11 @@
+<div class="text-center">
+  <div class="panel panel-primary">
+    <div class="panel-heading"><h1>Title: <%= @task.title %></h1>
+    </div>
+    <div class="panel-body">
+      <p>Description: <%= @task.description %></p>
+    </div>
+  </div>
+</div>
+
 <a href="/tasks">Task Index</a>
-<h1><%= @task.title %></h1>
-<p><%= @task.description %></p>
