--- a/app/views/dashboard.erb
+++ b/app/views/dashboard.erb
@@ -1,9 +1,11 @@
 <div class="text-center">
   <h1>Welcome to the Task Manager</h1>
     <ul>
-      <h4>
-        <li><a href="/tasks">Task Index</a></li>
-        <li><a href="/tasks/new">New Task</a></li>
-      </h4>
+      <div class="well">
+        <h4>
+          <li><a href="/tasks">Task Index</a></li>
+          <li><a href="/tasks/new">New Task</a></li>
+        </h4>
+      </div>
     </ul>
   </div>
