--- a/app/views/index.erb
+++ b/app/views/index.erb
@@ -1,5 +1,8 @@
-<h1>All Tasks</h1>
-
-<% @tasks.each do |task| %>
-  <h3><%= task.id %>: <a href="/tasks/<%= task.id %>"><%=task.title %></h3>
-<% end %>
+<div class="text-center">
+  <h1>All Tasks</h1>
+</div>
+<div class="well">
+  <% @tasks.each do |task| %>
+    <h3><%= task.id %>: <a href="/tasks/<%= task.id %>"><%=task.title %></a></h3>
+  <% end %>
+</div>
