just added and passed first capybara test

--- a/app/views/dashboard.erb
+++ b/app/views/dashboard.erb
@@ -1,5 +1,5 @@
 <div class="text-center">
-  <h1>Welcome to the Task Manager</h1>
+  <h1 id="greeting">Welcome to the TaskManager!</h1>
     <ul>
       <div class="well">
         <h4>
