added capybara tests for creating and editing a task, both passing

--- a/app/views/edit.erb
+++ b/app/views/edit.erb
@@ -8,6 +8,6 @@
     <div class="form-group">
       <textarea name='task[description]' class="form-control" placeholder="Task Description"><%= @task.description %></textarea><br/>
     </div>
-      <button type='submit' class="btn btn-primary"/>Edit</button>
+      <button type='submit' id='submit' class="btn btn-primary"/>Edit</button>
   </form>
 </div>
