--- a/app/views/new.erb
+++ b/app/views/new.erb
@@ -7,6 +7,6 @@
     <div class="form-group">
       <textarea name='task[description]' class="form-control" placeholder="Task Description"></textarea><br/>
     </div>
-      <button type='submit' class="btn btn-primary"/>Submit</button>
+      <button type='submit' class="btn btn-primary" value='submit'/>Submit</button>
   </form>
 </div>
