--- a/app/views/show.erb
+++ b/app/views/show.erb
@@ -1,5 +1,5 @@
 <div class="text-center">
-  <div class="panel panel-primary">
+  <div id="panel" class="panel panel-primary">
     <div class="panel-heading"><h1>Title: <%= @task.title %></h1>
     </div>
     <div class="panel-body">
